# cj

./: .env  .gitignore  BP.md  Cargo.toml  build.rs
migrations/: 0001_todos_table.sql  0003_example_table.sql  0004_remove_except_example_table.sql
node_extract/: output.json  package-lock.json  script.js
src/: cornucopia.rs  ichiran.rs  ichiran_extraction.rs  main.rs  migrate.rs  sentence_processing.rs
src/endpoints/: mod.rs  todos.rs
src/models/: todo.rs
src/queries/: module_1.sql
